k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fitola
  labels:
    name: fitola
    environment: production
